fixed responsive left margin spacing

--- a/styles.css
+++ b/styles.css
@@ -1,162 +1,165 @@
 /* universal*/
 * {
-    margin: 0;
-    padding: 0;
-  }
-  /* homepage */
-  .homepage-nav-links {
-    text-decoration: none;
-    font-size: 16px;
-    color: #000;
-    border-radius: 8px;
-    transition: 0.5s;
-    background-color: #fff3f3;
-    padding: 10px;
-  }
-  a:hover {
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
-  }
-  
-  h2 {
-    font-family: "Great Vibes", cursive;
-    font-size: 50px;
-    font-weight: normal;
-    text-align: center;
-  }
-  
-  ul {
-    list-style: none;
-    text-align: center;
-  }
-  .body-container {
-    margin-top: 70px;
-    font-family: lora;
-  }
-  .info-section {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-  .nav-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    line-height: 5;
-  }
-  .date-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    line-height: 2;
-  }
-  .date-name {
-    font-size: 14px;
-    opacity: 0.7;
-    text-align: center;
-  }
-  .date-number {
-    font-family: "Montserrat", sans-serif;
-    font-size: 40px;
-  }
-  .details {
-    text-align: center;
-  }
-  .count-down {
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    background-color: #fff3f3;
-    padding: 10px 5px 5px 5px;
-    border-radius: 8px;
-    transition: 0.5s;
-  }
-  .count-down:hover {
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
-  }
-  .homepage {
-    background-color: rgb(255, 253, 251);
-  }
-  .invite-intro {
-    text-align: center;
-    margin-top: 60px;
-  }
-  button {
-    margin-top: 15px;
-    /* margin-left: -40px; */
-    background-color: pink;
-    padding: 10px 5px;
-    opacity: 0.7;
-    border-radius: 3px;
-    border: 1px solid pink;
-  }
- 
-  .nav-links2 {
-    flex: 1;
-    text-align: right;
-    margin-left: -30px;
-  }
-  .nav-links2 ul li {
-    list-style: none;
-    display: inline;
-    padding: 6px 20px;
-    position: relative;
-    margin-bottom: -40px;
-  }
-  .nav-links2 ul li a {
-    text-decoration: none;
-    font-size: 16px;
-    color: #fff;
-  }
-  .nav-links2 ul li::after {
-    content: "";
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .nav-links2 ul li:hover::after {
-    width: 100%;
-  }
-  .col-6 {
-    flex-basis: 48%;
-    width: 100%;
-    margin-bottom: 30px;
-  }
-  .col-6 div {
-    display: flex;
-    align-items: center;
-    margin-bottom: 40px;
-  }
-  .bi {
-    font-size: 40px;
-    color: #f44336;
-    margin: 20px;
-    margin-right: 15px;
-  }  
-  select {
-    margin-top: 15px;
-    text-align: center;
-  }
-  .index {
-    display: none;
-  }
-  
-  .img-fluid{
-    border: 1px solid black;
-    border-radius: 4px; 
-    height:100%;
-    width: 100%;
-  }
-  /* gallery page*/
+  margin: 0;
+  padding: 0;
+}
+/* homepage */
+.homepage-nav-links {
+  text-decoration: none;
+  font-size: 16px;
+  color: #000;
+  border-radius: 8px;
+  transition: 0.5s;
+  background-color: #fff3f3;
+  padding: 10px;
+}
+a:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+h2 {
+  font-family: "Great Vibes", cursive;
+  font-size: 50px;
+  font-weight: normal;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  text-align: center;
+}
+.body-container {
+  margin-top: 70px;
+  font-family: lora;
+}
+.info-section {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.nav-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  line-height: 5;
+}
+.date-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  line-height: 2;
+}
+.date-name {
+  font-size: 14px;
+  opacity: 0.7;
+  text-align: center;
+}
+.date-number {
+  font-family: "Montserrat", sans-serif;
+  font-size: 40px;
+}
+.details {
+  text-align: center;
+}
+.count-down {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  background-color: #fff3f3;
+  padding: 10px 5px 5px 5px;
+  border-radius: 8px;
+  transition: 0.5s;
+}
+.count-down:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+.homepage {
+  background-color: rgb(255, 253, 251);
+}
+.invite-intro {
+  text-align: center;
+  margin-top: 60px;
+}
+.margin-right {
+  margin-left: -30px;
+}
+button {
+  margin-top: 15px;
+  /* margin-left: -40px; */
+  background-color: pink;
+  padding: 10px 5px;
+  opacity: 0.7;
+  border-radius: 3px;
+  border: 1px solid pink;
+}
+
+.nav-links2 {
+  flex: 1;
+  text-align: right;
+  margin-left: -30px;
+}
+.nav-links2 ul li {
+  list-style: none;
+  display: inline;
+  padding: 6px 20px;
+  position: relative;
+  margin-bottom: -40px;
+}
+.nav-links2 ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #fff;
+}
+.nav-links2 ul li::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.nav-links2 ul li:hover::after {
+  width: 100%;
+}
+.col-6 {
+  flex-basis: 48%;
+  width: 100%;
+  margin-bottom: 30px;
+}
+.col-6 div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.bi {
+  font-size: 40px;
+  color: #f44336;
+  margin: 20px;
+  margin-right: 15px;
+}
+select {
+  margin-top: 15px;
+  text-align: center;
+}
+.index {
+  display: none;
+}
+
+.img-fluid {
+  border: 1px solid black;
+  border-radius: 4px;
+  height: 100%;
+  width: 100%;
+}
+/* gallery page*/
 .gallery-body {
-    background-color: rgb(255, 253, 251);
-  }
-  .announcement {
-    font-family: lora;
-    font-size: 100px;
-    text-align: center;
-    margin-top: 50px;
-  }
-  /* responsive */
+  background-color: rgb(255, 253, 251);
+}
+.announcement {
+  font-family: lora;
+  font-size: 100px;
+  text-align: center;
+  margin-top: 50px;
+}
+/* responsive */
